package com.yyf.app.ch7;

public class App {
    public static void main(String[] args) {
        Proxy proxy = new Proxy();
        proxy.request();
    }
}
