package com.yyf.app.ch7;

/**
 * 代理和真实对象的共同接口
 */
public interface ISubject {

    void request();
}
